# Oxide_VLSI

./: Cargo.toml  LICENSE  Oxide_VLSI.md  README.md
crates/oxide-cli/: Cargo.toml
crates/oxide-cli/src/: main.rs
crates/oxide-cli/src/commands/: drc.rs  export.rs  extract.rs  grade.rs  mod.rs  new.rs  report.rs
crates/oxide-db/: Cargo.toml
crates/oxide-db/src/: cell.rs  geometry.rs  label.rs  lib.rs  library.rs  project.rs  shape.rs
crates/oxide-db/tests/: roundtrip.rs
crates/oxide-drc/: Cargo.toml
crates/oxide-drc/src/: checks.rs  engine.rs  lib.rs  violation.rs
crates/oxide-drc/tests/: drc_tests.rs
crates/oxide-extract/: Cargo.toml
crates/oxide-extract/src/: connectivity.rs  device.rs  extractor.rs  lib.rs  net.rs
crates/oxide-gds/: Cargo.toml
crates/oxide-gds/src/: export.rs  import.rs  layer_map.rs  lib.rs
crates/oxide-gui/: Cargo.toml
crates/oxide-gui/src/: app.rs  canvas.rs  commands.rs  export.rs  main.rs  templates.rs  tools.rs
crates/oxide-gui/src/panels/: drc_panel.rs  inspector.rs  layers.rs  mod.rs  netlist.rs  project.rs  welcome.rs
crates/oxide-report/: Cargo.toml
crates/oxide-report/src/: html.rs  lib.rs  markdown.rs  pdf.rs
crates/oxide-sch/: Cargo.toml
crates/oxide-sch/src/: instance.rs  lib.rs  schematic.rs  symbol.rs  wire.rs
crates/oxide-sim/: Cargo.toml
crates/oxide-sim/src/: lib.rs  ngspice.rs  spice.rs  waveform.rs
crates/oxide-tech/: Cargo.toml
crates/oxide-tech/data/: lambda_cmos.toml
crates/oxide-tech/src/: layer.rs  lib.rs  rules.rs  tech.rs
