[workspace]
name = "Oxide_VLSI"
resolver = "2"
members = [
    "crates/oxide-tech",
    "crates/oxide-db",
    "crates/oxide-drc",
    "crates/oxide-extract",
    "crates/oxide-gds",
    "crates/oxide-sch",
    "crates/oxide-sim",
    "crates/oxide-report",
    "crates/oxide-gui",
    "crates/oxide-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Oxide VLSI Contributors"]
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
ron = "0.8"
toml = "0.8"

# Geometry
geo = "0.28"
rstar = "0.12"

# GUI (oxide-gui only)
eframe = { version = "0.34" }
egui = "0.34"

# Export
svg = "0.18"
image = "0.25"

# Reporting (v0.4+)
printpdf = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
