[package]
name = "oxide-cli"
description = "Oxide VLSI command-line tool for grading, export, and batch operations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "Oxide_VLSI_cli"
path = "src/main.rs"

[dependencies]
oxide-tech = { path = "../oxide-tech" }
oxide-db = { path = "../oxide-db" }
oxide-drc = { path = "../oxide-drc" }
oxide-extract = { path = "../oxide-extract" }
oxide-report = { path = "../oxide-report" }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
