[package]
name = "oxide-gds"
description = "GDSII import and export for Oxide VLSI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oxide-tech = { path = "../oxide-tech" }
oxide-db = { path = "../oxide-db" }
gds21 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
