[package]
name = "oxide-gui"
description = "Oxide VLSI desktop application (egui/wgpu)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "Oxide_VLSI"
path = "src/main.rs"

[dependencies]
oxide-tech = { path = "../oxide-tech" }
oxide-db = { path = "../oxide-db" }
oxide-drc = { path = "../oxide-drc" }
oxide-extract = { path = "../oxide-extract" }
oxide-report = { path = "../oxide-report" }
eframe = { workspace = true }
egui = { workspace = true }
svg = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
